tests/idris2/error/perror006/expected
1/1: Building PError (PError.idr)
Error: Expected 'else'.

PError:7:1--7:4
 3 |
 4 | bar : Int -> Int
 5 | bar x = if x == 95 then 0
 6 |
 7 | baz : Int -> Int
     ^^^

